--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,7 +10,9 @@
     <%- include("template/header") %>
     <div class="mt-3 container d-flex flex-column align-items-center justify-content-center">
       <h1>Hello, Welcome to the Admin Page <%= name %></h1>
-      <img src="<%= image %>" alt="hi" style="width: 400px" />
+      <img src="<%= image1 %>" alt="hi" style="width: 400px" />
+      <img src="<%= image2 %>" alt="hi" style="width: 400px" />
+      <img src="<%= image3 %>" alt="hi" style="width: 400px" />
     </div>
     <div class="mt-5 container d-flex justify-content-center">
       <form action="/admin" method="POST">
