--- a/views/members.ejs
+++ b/views/members.ejs
@@ -10,7 +10,19 @@
     <%- include("template/header") %>
     <div class="mt-3 container d-flex flex-column align-items-center justify-content-center">
       <h1>Hello, <%= name %></h1>
-      <img src="<%= image %>" alt="hi" style="width: 400px" />
+      <div class="container d-flex flex-row justify-content-center">
+        <div class="row">
+          <div class="col-sm">
+            <img src="<%= image1 %>" alt="hi" style="width: 200px" />
+          </div>
+          <div class="col-sm">
+            <img src="<%= image2 %>" alt="hi" style="width: 200px" />
+          </div>
+          <div class="col-sm">
+            <img src="<%= image3 %>" alt="hi" style="width: 200px" />
+          </div>
+        </div>
+      </div>
     </div>
     <div class="mt-5 container d-flex justify-content-center">
       <form action="/admin" method="GET">
